...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rows" />

        <EditText
            android:id="@+id/rows_edit_txt_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="2"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/columns" />

        <EditText
            android:id="@+id/columns_edit_txt_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/generate_row_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/column_container"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/action_container"
        android:layout_below="@+id/generate_row_btn">

        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </ScrollView>

...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calculate_shortest_path"
            android:textSize="8dp" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center"
...
