...
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:weightSum="2">

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calculate_shortest_path"
            android:textSize="8dp" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/result_status_lable_txt_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_status" />

            <TextView
                android:id="@+id/result_status_txt_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_cost" />

            <TextView
                android:id="@+id/result_cost_txt_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_path" />

            <TextView
                android:id="@+id/result_path_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>
...
